--- a/src/style.scss
+++ b/src/style.scss
@@ -201,7 +201,14 @@ a{
     color: var(--text-color);
 }
 
-
+.welcomeContainer{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .mainLogo{
     position: relative;
@@ -259,7 +266,9 @@ a{
     box-shadow: 0px 5px 10px #00000028;
     height: 4rem;
     width: 4rem;
-
+    cursor: pointer;
+    display: grid;
+    place-content: center;
     transform: translateY(150%);
     transition: transform 280ms ease-in-out;
     animation: nextAnima 1000ms 4000ms cubic-bezier(0.46, 0.03, 0.52, 0.96) 1 forwards;
